--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --primary-color: #002642;
     --secondary-color: #69140e;
     --third-color: #a44200;
@@ -6,96 +6,209 @@
     --secondary-background: #b7b5b3;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     background-color: var(--background-color);
     color: var(--primary-color);
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-li{
+li {
     list-style: none;
 }
 
-button{
-    text-align: center;
-    margin: 15px;
-    padding: 15px;
+button {
     border: none;
+    padding: 10px;
+    width: 85px;
     border-radius: 10;
     color: var(--background-color);
     background-color: var(--secondary-color);
 }
 
-button:hover{
-    animation-duration: 1s;
-    animation-name: nav-buttons;  
+button:hover {
+    animation-duration: 0.5s;
+    animation-name: nav-buttons;
     animation-direction: alternate;
-    padding: 30px;
+    padding: 10px;
+    width: 100px;
     cursor: pointer;
 }
 
-.App{
+.App {
     display: flex;
     flex-direction: column;
-    height: 80vh;
 }
 
-.Header{
+.Header {
     display: flex;
     justify-content: space-between;
     border-bottom-style: solid;
     border-bottom-color: var(--primary-color);
     margin: 10px 30px;
-    height: 100px;
+    height: 30%;
 }
 
-.Header h1{
+.Header h1 {
     margin: 10px 50px;
 }
 
-.Nav{
-    display: flex;
-    height: 75%;
-    width: 600px;
+nav {
+    width: 65%;
 }
 
-.project{
+.Nav {
+    display: flex;
+    justify-content: space-evenly;
+    height: 75%;
+    width: 100%;
+}
+
+.button-con {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    width: 100%;
+    align-items: center;
+}
+
+.project {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 15px 25%;
+    min-height: 75vh;
 }
 
-.About-me #profile{
+.About-me #profile {
     display: flex;
     align-items: flex-end;
     padding: 30px;
     width: 25%;
 }
 
-.About-me img{
+.About-me img {
     border-style: solid;
     border-radius: 180px;
     border-color: var(--primary-color);
     width: 100%;
+    min-width: 150px;
     height: auto;
 }
 
-.Portfolio h1, .Portfolio a{
+.Portfolio h1, .Portfolio a {
     margin: 15px;
 }
 
-@keyframes nav-buttons {
-    from{
-        padding: 15px;
+.Portfolio a img {
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.Portfolio a img:hover {
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+.Contact {
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+
+.Contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    width: 100%;
+    background-color: var(--third-color);
+}
+
+.Contact form .form-content {
+    color: var(--secondary-background);
+    background-color: var(--third-color);
+    margin: 15px;
+}
+
+.Contact form input {
+    padding: 5px;
+    border-radius: 15px;
+    outline: none;
+}
+
+.Contact form textarea {
+    border-radius: 15px;
+    padding: 5px;
+    outline: none;
+    margin-bottom: 30px;
+    max-width: 75%;
+    resize: horizontal;
+}
+
+.Footer {
+    display: flex;
+    justify-content: center;
+    background-color: var(--third-color);
+    padding: 15px 0px;
+}
+
+.Footer ul {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    width: 75%;
+    background-color: var(--third-color);
+}
+
+.Footer li {
+    background-color: var(--third-color);
+}
+
+.Footer a {
+    background-color: var(--third-color);
+}
+
+.Footer a img {
+    width: 50px;
+    height: auto;
+    border-radius: 180px;
+}
+
+.Footer a img:hover {
+    filter: invert(120%);
+    transition: filter 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 940px) {
+    .Header {
+        flex-direction: column;
+        align-items: center;
+        padding: 30px;
+        margin: 30px;
     }
 
-    to{
-        padding: 30px;
+    .About-me #profile{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 885px){
+    .Nav {
+        
+        flex-wrap: wrap;
+    }
+}
+
+@keyframes nav-buttons {
+    from {
+        width: 85px;
+    }
+    to {
+        width: 100px;
     }
 }
